tourist_agency_project/src/main/java/com/example/demo/error/PackageNotFoundException.java
package com.example.demo.error;

public class PackageNotFoundException extends RuntimeException {//ResourceNotFoundException
    public PackageNotFoundException(String message)  {
        super(message);
    }
}
